--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +9,14 @@
     <!-- <link href="https://fonts.googleapis.com/css?family=Allerta|Montserrat:400,700" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/invie.css" />
 </head>
+
 <body>
     <section id="portada" class="portada">
         <header id="header" class="header contenedor">
             <figure class="logotipo">
                 <!-- logotipo -->
-                <img src="images/invie.png" width="186" height="60" alt="Invie logotipo"/>
-            </figure>            
+                <img src="images/invie.png" width="186" height="60" alt="Invie logotipo" />
+            </figure>
             <nav class="menu">
                 <!-- Menu -->
                 <ul>
@@ -26,22 +28,23 @@
                     </li>
                     <li>
                         <a href="precios.html">Precios</a>
-                    </li>    
+                    </li>
                 </ul>
             </nav>
-        </header>            
+        </header>
         <!-- portada -->
         <div class="contenedor">
             <h1 class="titulo">Guitarras <span>invie</span>sibles</h1><!-- titulo -->
             <h3 class="title-a">Se la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
-            <button>Conoce mas</button><!-- boton -->        
+            <button>Conoce mas</button><!-- boton -->
         </div>
     </section>
     <section id="guitarras" class="guitarras contenedor">
         <!-- guitarras -->
         <h2>Nuestras guitarras</h2><!-- titulo -->
-        <article class="guitarra"><!-- guitarra 1 -->
-            <img src="images/invie-acustica.png" alt="Guitarra Invie Acustica" width="350" class="derecha"/>
+        <article class="guitarra">
+            <!-- guitarra 1 -->
+            <img src="images/invie-acustica.png" alt="Guitarra Invie Acustica" width="350" class="derecha" />
             <div class="contenedor-guitarra-a">
                 <h3 class="title-b">Invie Acustica</h3>
                 <ol>
@@ -54,11 +57,12 @@
                     <li>
                         Incluye estuch invisible de aluminio
                     </li>
-                </ol>        
+                </ol>
             </div>
         </article>
-        <article class="guitarra b"><!-- guitarra 2 -->
-            <img src="images/invie-classic.png" alt="Guitarra Invie Clasica" width="350" class="izquierda"/>
+        <article class="guitarra b">
+            <!-- guitarra 2 -->
+            <img src="images/invie-classic.png" alt="Guitarra Invie Clasica" width="350" class="izquierda" />
             <div class="contenedor-guitarra-b">
                 <h3 class="title-b">Invie Classic</h3>
                 <ol>
@@ -71,7 +75,7 @@
                     <li>
                         Inicia tu camino como Rockstar
                     </li>
-                </ol>        
+                </ol>
             </div>
         </article>
     </section>
@@ -81,7 +85,7 @@
                 <img src="images/invie-white.png" alt="logotipo blanco" />
                 <a href="tel:+50256917111"><strong>&phone; Telefono</strong><span>56917111</span></a>
                 <a href="mailto:contacto@invie.com"><strong>E-mail</strong><span>contacto@invie.com</span></a>
-            </div>            
+            </div>
             <form class="formulario">
                 <div class="col1">
                     <label for="nombre">Nombre</label>
@@ -94,7 +98,7 @@
                         </label>
                         <label for="hombre">
                             <input type="radio" id="hombre" name="sexo" value="hombre" />Hombre
-                        </label>                
+                        </label>
                     </div>
                     <div class="intereses">
                         <label for="cotizacion">
@@ -109,15 +113,16 @@
                         <label for="otros">
                             <input type="checkbox" id="otros" name="intereses" value="otros" />Otros
                         </label>
-                    </div>        
+                    </div>
                 </div>
                 <div class="col2">
                     <label for="asunto">Comentario</label>
-                    <textarea id="asunto" name="asunto" cols="30" rows="10" placeholder="ingresa tu comentario"></textarea>    
+                    <textarea id="asunto" name="asunto" cols="30" rows="10" placeholder="ingresa tu comentario"></textarea>
                     <input type="submit" value="Enviar" />
                 </div>
-            </form>        
+            </form>
         </div>
     </footer>
 </body>
+
 </html>
